# opendota

./: cabal.project  opendota.cabal
.github/workflows/: build.yaml
scripts/: ghcid-opendota.sh
spec/: OpenDotaSpec.hs  RunVCRClient.hs
spec/OpenDota/: Hedgehog.hs  StringEncodedIntegralSpec.hs  TypesSpec.hs
src/: OpenDota.hs
src/OpenDota/: API.hs  StringEncodedIntegral.hs  Types.hs
src/OpenDota/Types/: PlayerColor.hs  PlayerSlot.hs
